// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns a deterministic variation based on trackingId 1`] = `
Object {
  "name": "disabled",
  "weight": 0.5,
}
`;

exports[`returns a deterministic variation based on trackingId 2`] = `
Object {
  "name": "disabled",
  "weight": 0.5,
}
`;

exports[`returns a deterministic variation based on trackingId 3`] = `
Object {
  "name": "enabled",
  "weight": 0.5,
}
`;

exports[`returns a variation based on criterias 1`] = `
Object {
  "criteria": "\`true\`",
  "name": "enabled",
}
`;
